Istio/online-boutique/task4/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
spec:
  hosts:
    - "onlineboutique.example.com"
  gateways:
    - frontend-gateway
  http:
    - match:
       - headers:
            user-agent:
               regex: '.*Firefox.*$' 
      route:
        - destination:
            host: frontend
            subset: v1
      timeout: 3s
    - match:
       - headers:
           user-agent:
               regex: '.*Chrome.*'
      route:
        - destination:
            host: frontend
            subset: v2
      timeout: 3s
    - route:
        - destination:
            host: frontend
            subset: v1
          weight: 50
        - destination:
            host: frontend
            subset: v2
          weight: 50
      timeout: 3s
